# flink-fast-observer

./: .gitignore  database.py  docker-compose.yml  init_clusters.py  pyproject.toml
alembic/: env.py
flink_observer/api/: main.py  schemas.py
flink_observer/api/static/css/: dashboard.css
flink_observer/api/static/js/: dashboard.js
flink_observer/api/static/templates/: dashboard.html
flink_observer/data/: models.py  repositories.py
flink_observer/service/: data_collector.py  flink_client.py
tests/: conftest.py  test_clusters.py
